dhall/tests/type-inference/failure/unit/RecordMixedKinds3.txt
Type error: error: InvalidFieldType
 --> <current file>:1:17
  |
1 | { x = Type, y = Kind }
  |                 ^^^^ InvalidFieldType
  |
